antiflicker fix for safari

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -403,11 +403,6 @@ p {
 .page-wrapper,
 .header-antiflicker,
 body > header .header-background {
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  -o-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
   -webkit-transition: all 0.33s cubic-bezier(0.694, 0.0482, 0.335, 1);
   -moz-transition: all 0.33s cubic-bezier(0.694, 0.0482, 0.335, 1);
   -o-transition: all 0.33s cubic-bezier(0.694, 0.0482, 0.335, 1);
