--- a/public/framework/common-files/less/common.less
+++ b/public/framework/common-files/less/common.less
@@ -329,11 +329,11 @@ p {
 .page-wrapper,
 .header-antiflicker,
 body > header .header-background {
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  -o-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
+  // -webkit-transform: translate3d(0, 0, 0);
+  // -moz-transform: translate3d(0, 0, 0);
+  // -ms-transform: translate3d(0, 0, 0);
+  // -o-transform: translate3d(0, 0, 0);
+  // transform: translate3d(0, 0, 0);
   -webkit-transition: all .33s cubic-bezier(.694, .0482, .335, 1);
   -moz-transition: all .33s cubic-bezier(.694, .0482, .335, 1);
   -o-transition: all .33s cubic-bezier(.694, .0482, .335, 1);
